# bil142-proje

./: CMakeLists.txt  README.md  events.h  eventss.cpp  main.cpp  spaceships.cpp  spaceships.h  strongship2.h
inc/: commonship2.h  events.h  shipfleetmanager.h  spaceships.h  speedship2.h  strongship2.h
src/: commonship.cpp  eventss.cpp  spaceships.cpp  speedship.cpp  strongship.cpp
